# ThirdParty-FilterSQP

./: .gitattributes  INSTALL.FilterSQP  Makefile.am  Makefile.in  coinfiltersqp-uninstalled.pc.in  coinfiltersqp.pc.in  configure  configure.ac  filtersqp.patch
